--- a/odoo-custom-addons/kin_loading/wizard/customer_stock_report_wizard_view.xml
+++ b/odoo-custom-addons/kin_loading/wizard/customer_stock_report_wizard_view.xml
@@ -12,12 +12,12 @@
                          <!--<field name="end_date" />-->
                     <!--</group>-->
                     <group col="4" colspan="4" >
-                         <field name="partner_id" options="{'no_open':True,'no_create':True}"  />
+                         <field name="partner_ids" widget="many2many_tags" options="{'no_open':True,'no_create':True}"  />
                         <field name="type" required="1" />
                         <field name="product_ids"  widget="many2many_tags" domain="[('type','=','product')]" options="{'no_open':True,'no_create':True}" />
                     </group>
                         <footer>
-                            <button default_focus="1" icon="gtk-execute" name="customer_stock_excel_report" string="Export" type="object"  colspan="2" class="oe_highlight" />
+                            <button default_focus="1"  name="customer_stock_excel_report" string="Export" type="object"  colspan="2" class="oe_highlight" />
                             or <button special="cancel" class="oe_link"  string="Cancel"  />
                         </footer>
                 </form>
@@ -27,7 +27,6 @@
 		<record id="action_customer_stock_report_wizard" model="ir.actions.act_window">
             <field name="name">Generate Customer Stock Report</field>
             <field name="res_model">customer.stock.report.wizard</field>
-
             <field name="view_mode">form</field>
             <field name="view_id" ref="view_customer_stock_report_wizard"/>
             <field name="context">{}</field>
