--- a/odoo-custom-addons/kin_loading/wizard/customer_stock_summary_report_wizard_view.xml
+++ b/odoo-custom-addons/kin_loading/wizard/customer_stock_summary_report_wizard_view.xml
@@ -17,7 +17,7 @@
                         <field name="product_ids"  widget="many2many_tags" domain="[('type','=','product')]" options="{'no_open':True,'no_create':True}" />
                     </group>
                         <footer>
-                            <button default_focus="1" icon="gtk-execute" name="customer_stock_summary_excel_report" string="Export" type="object"  colspan="2" class="oe_highlight" />
+                            <button default_focus="1"  name="customer_stock_summary_excel_report" string="Export" type="object"  colspan="2" class="oe_highlight" />
                             or <button special="cancel" class="oe_link"  string="Cancel"  />
                         </footer>
                 </form>
@@ -27,14 +27,12 @@
 		<record id="action_customer_stock_summary_report_wizard" model="ir.actions.act_window">
             <field name="name">Generate Customer Stock Summary Report</field>
             <field name="res_model">customer.stock.summary.report.wizard</field>
-
             <field name="view_mode">form</field>
             <field name="view_id" ref="view_customer_stock_summary_report_wizard"/>
             <field name="context">{}</field>
             <field name="type">ir.actions.act_window</field>
             <field name="target">new</field>
         </record>
-
 
 
    </data>
