--- a/odoo-custom-addons/kin_loading/wizard/mass_email_sot_view.xml
+++ b/odoo-custom-addons/kin_loading/wizard/mass_email_sot_view.xml
@@ -18,26 +18,26 @@
             </field>
         </record>
 
-        <record id="action_mass_email_sots" model="ir.actions.act_window">
-            <field name="name">Mass Email Summary of Transactions</field>
-            <field name="type">ir.actions.act_window</field>
-            <field name="res_model">mass.email.sot.wizard</field>
 
-            <field name="view_mode">form</field>
-            <field name="target">new</field>
-            <!--<field name="groups_id" eval="[(4,ref('base.group_hr_user'))]"/>           -->
-        </record>
+        <record id="action_mass_email_sots_multi" model="ir.actions.act_window">
+        <field name="name">Mass Email Summary of Transactions</field>
+        <field name="res_model">mass.email.sot.wizard</field>
+        <field name="view_mode">form</field>
+        <field name="target">new</field>
+        <field name="binding_model_id" ref="base.model_res_partner"/>
+        <field name="binding_view_types">list</field>
+    </record>
+
+    <record id="mass_email_sot_multi_single" model="ir.actions.act_window">
+        <field name="name">Email Summary of Transaction</field>
+        <field name="res_model">mass.email.sot.wizard</field>
+        <field name="view_mode">form</field>
+        <field name="target">new</field>
+        <field name="binding_model_id" ref="base.model_res_partner"/>
+        <field name="binding_view_types">form</field>
+    </record>
 
 
-        <record model="ir.values" id="mass_email_sot_multi">
-            <field name="model_id" ref="base.model_res_partner" />
-            <field name="name">Mass Email Summary of Transactions</field>
-            <field name="key2">client_action_multi</field>
-            <field name="value" eval="'ir.actions.act_window,' + str(ref('action_mass_email_sots'))" />
-            <field name="key">action</field>
-            <field name="model">res.partner</field>
-            <field name="groups_id" eval="[(4,ref('account.group_account_user'))]"/>
-        </record>
 
     </data>
 </odoo>
