--- a/odoo-custom-addons/kin_loading/views/loading_view.xml
+++ b/odoo-custom-addons/kin_loading/views/loading_view.xml
@@ -1470,10 +1470,9 @@
         <record id="action_invoice_tree1_loading_throughput_extend" model="ir.actions.act_window">
             <field name="name">Throughput Invoices</field>
             <field name="res_model">account.move</field>
-
-            <field name="view_mode">tree,kanban,form,calendar,pivot,graph</field>
+            <field name="view_mode">tree,kanban,form,pivot,graph</field>
             <field eval="False" name="view_id"/>
-            <field name="domain">[('type','in',('out_invoice', 'out_refund')),('is_throughput_invoice','=',True)]</field>
+            <field name="domain">[('is_throughput_invoice','=',True)]</field>
             <field name="context">{'default_type':'out_invoice', 'type':'out_invoice', 'journal_type': 'sale'}</field>
             <field name="search_view_id" ref="account.view_account_invoice_filter"/>
         </record>
