--- a/odoo-custom-addons/kin_loading/views/loading_view.xml
+++ b/odoo-custom-addons/kin_loading/views/loading_view.xml
@@ -2044,7 +2044,16 @@
 
 
 
-
+ <record id="purchase_order_form_loading" model="ir.ui.view">
+            <field name="name">purchase.order.form.loading</field>
+            <field name="model">purchase.order</field>
+            <field name="inherit_id" ref="purchase.purchase_order_form" />
+            <field name="arch" type="xml">
+                <field name="product_uom" position="after" >
+                    <field name="conv_rate" />
+                </field>
+            </field>
+ </record>
 
 
     </data>
