--- a/odoo-custom-addons/kin_loading/views/loading_view.xml
+++ b/odoo-custom-addons/kin_loading/views/loading_view.xml
@@ -219,7 +219,7 @@
                  </button>
 
                 <button name="action_quotation_send" type="object"  groups="sale.group_proforma_sales" class="btn-primary"  attrs="{'invisible': ['|', ('state', '!=', 'draft'), ('invoice_count','&gt;=',1)]}" context="{'proforma': True}" position="attributes">
-                        <attribute name="attrs" >{'invisible': ['|', ('state', '!=', 'so_submitted'), ('invoice_count','&gt;=',1)]}</attribute>
+                        <attribute name="attrs" >{'invisible': ['|', ('state', '!=', 'quote_submitted'), ('invoice_count','&gt;=',1)]}</attribute>
                 </button>
 
                 <button name="action_quotation_send" type="object"  groups="sale.group_proforma_sales" attrs="{'invisible': ['|', ('state', '=', 'draft'), ('invoice_count','&gt;=',1)]}" context="{'proforma': True}" position="replace" />
