--- a/odoo-custom-addons/kin_loading/views/loading_view.xml
+++ b/odoo-custom-addons/kin_loading/views/loading_view.xml
@@ -1704,21 +1704,6 @@
 
 
 
-        <!-- Purchase Form -->
-         <record id="purchase_order_form_depot_extend" model="ir.ui.view">
-            <field name="name">purchase.order.form.depot.extend</field>
-            <field name="model">purchase.order</field>
-            <field name="inherit_id" ref="purchase.purchase_order_form" />
-            <field name="arch" type="xml">
-                <xpath expr="//form" position="attributes" >
-                    <attribute name="duplicate">0</attribute>
-                </xpath>
-                <field name="partner_ref" position="after" >
-                     <field name="depot_id" options ="{'no_open':True,'no_create':True}" groups="kin_loading.group_show_depot_on_po" />
-                </field>
-
-            </field>
-         </record>
 
 
          <!-- DRP INFO -->
@@ -2052,16 +2037,98 @@
 
 
 
- <record id="purchase_order_form_loading" model="ir.ui.view">
+
+        <menuitem action="purchase.purchase_rfq" id="purchase.menu_purchase_rfq"
+            parent="purchase.menu_procurement_management"
+            sequence="0"  groups="group_show_default_rfq_menu"  />
+        <menuitem action="purchase.purchase_form_action" id="purchase.menu_purchase_form_action" parent="purchase.menu_procurement_management" sequence="6" groups="group_show_default_purchase_menu"  />
+
+        <record id="purchase_form_action_procurement" model="ir.actions.act_window">
+            <field name="name">Procurement</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">purchase.order</field>
+            <field name="view_mode">tree,kanban,form,pivot,graph,calendar,activity</field>
+            <field name="view_id" ref="purchase.purchase_order_view_tree"/>
+            <field name="domain">[('is_purchase','=',False)]</field>
+            <field name="search_view_id" ref="purchase.purchase_order_view_search"/>
+            <field name="context">{'default_is_procurement': True}</field>
+            <field name="help" type="html">
+              <p class="o_view_nocontent_smiling_face">
+                No procurement found. Let's create one!
+              </p><p>
+                Once you ordered your products to your supplier, confirm your request for quotation and it will turn into a purchase order.
+              </p>
+            </field>
+        </record>
+        <menuitem name="Procurement" action="purchase_form_action_procurement" id="menu_purchase_form_action_procurement" parent="purchase.menu_procurement_management" sequence="6" groups="group_show_procurement_menu"/>
+
+
+         <record id="purchase_form_action_purchase" model="ir.actions.act_window">
+            <field name="name">Purchase Orders</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">purchase.order</field>
+            <field name="view_mode">tree,kanban,form,pivot,graph,calendar,activity</field>
+            <field name="view_id" ref="purchase.purchase_order_view_tree"/>
+            <field name="domain">[('is_purchase','=',True)]</field>
+            <field name="search_view_id" ref="purchase.purchase_order_view_search"/>
+            <field name="context">{'default_is_purchase': True}</field>
+            <field name="help" type="html">
+              <p class="o_view_nocontent_smiling_face">
+                No purchase order found. Let's create one!
+              </p><p>
+                Once you ordered your products to your supplier, confirm your request for quotation and it will turn into a purchase order.
+              </p>
+            </field>
+        </record>
+        <menuitem name="Purchase"  action="purchase_form_action_purchase" id="menu_purchase_form_action_purchase" parent="purchase.menu_procurement_management" sequence="6"  groups="group_show_purchase_menu" />
+
+
+         <record id="purchase_order_form_loading" model="ir.ui.view">
             <field name="name">purchase.order.form.loading</field>
             <field name="model">purchase.order</field>
             <field name="inherit_id" ref="purchase.purchase_order_form" />
             <field name="arch" type="xml">
+                <xpath expr="//form" position="attributes" >
+                    <attribute name="duplicate">0</attribute>
+                </xpath>
+                <field name="partner_ref" position="after" >
+                     <field name="depot_id" options ="{'no_open':True,'no_create':True}" groups="kin_loading.group_show_depot_on_po" />
+                </field>
                 <field name="product_uom" position="after" >
                     <field name="conv_rate" />
                 </field>
+                <field name="conv_rate" position="attributes" >
+                    <attribute name="groups" >kin_loading.group_show_purchase_menu</attribute>
+                </field>
+                <field name="depot_id" position="attributes" >
+                    <attribute name="groups" >kin_loading.group_show_purchase_menu</attribute>
+                </field>
             </field>
- </record>
+        </record>
+
+        <!-- Purchase request -->
+        <record id="purchase_request_form_heyden" model="ir.ui.view">
+            <field name="name">purchase.request.form.extend</field>
+            <field name="model">purchase.request</field>
+            <field name="inherit_id" ref="kin_purchase_request.purchase_request_form_extend" />
+            <field name="arch" type="xml">
+
+                 <xpath expr="//field[@name='line_ids']/form//field[@name='product_id']" position="attributes" >
+                      <attribute name="domain">[('white_product','not in',['pms','ago','kero','atk','lpfo'])]</attribute>
+                 </xpath>
+
+                <xpath expr="//field[@name='line_ids']/tree/field[@name='product_id']" position="attributes" >
+                     <attribute name="domain">[('white_product','not in',['pms','ago','kero','atk','lpfo'])]</attribute>
+
+                </xpath>
+
+
+
+            </field>
+        </record>
+
+
+
 
 
     </data>
